# src/transmute_server/api_app.py
@@ -26,8 +26,8 @@ def api(handler, add_auth=True):
     def wrapper(*args, **kwargs):
         if kwargs['Authorization'] is not None:
             token_tokens = kwargs['Authorization'].split(" ")
-            if len(token_tokens) > 1:
-                kwargs.update({'auth_token': token.decode(token_tokens[1])})
+            token_value = token_tokens[1] if len(token_tokens) > 1 else token_tokens[0]
+            kwargs.update({'auth_token': token.decode(token_value)})
         del kwargs['Authorization']
         result = handler(*args, **kwargs)
         if result[1] != 200:
